2003-06-22  Graham Percival  <gperlist@shaw.ca>

	* input/test/thumb.ly: delete, merged into refman.

	* Documentation/user/refman.itely: added thumb info to Fingering.

	* input/test/ follow-break.ly multi-slope.ly note-shift.ly
	notemode-chords.ly orchestalpart.ly rhythmic-staff.ly
	vertical-align.ly : deleted files.

2003-06-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/align-interface.cc (find_fixed_alignment_parent): new function.

	* lily/line-spanner.cc (broken_trend_offset): remove function.
	(get_broken_offset): idem.
	(brew_molecule): rewrite the line-break case.

	* input/regression/follow-voice-break.ly:  new file.

	* lily/line-spanner.cc (after_line_breaking): remove lines at the
	start of a system.

2003-06-20  Graham Percival  <gperlist@shaw.ca>

	* input/test/tuplet-rest.ly: moved to regression.

	* input/test/ script-horizontal.ly tuplet-spanner-duration.ly:
	deleted file.

	* input/test/ {many} : marked file for possible deletion.

2003-06-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/beam-funky.ly: add note about (disputed)
	correct beaming.

	* ly/engraver-init.ly (ScoreContext): put key-signature after
	staff-bar
	
2003-06-20  Graham Percival  <gperlist@shaw.ca>

	* input/test/ broken.ly lyric-phrasing.ly: deleted.

	* input/test/slur-mininum.ly: renamed to slur-minimum-length.ly.

	* input/test/staff-line-leading.ly: renamed to  staff-space.ly.

	* input/test/no-stem-extend.ly: moved to stem-extend.ly; previous
	stem-extend was deleted (it was duplicate example, and not as
	good).

	* input/test/[s-z]*.ly: add texidoc index.

2003-06-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/slur.cc (get_boundary_notecolumn_y): change name from
	get_first_notecolumn_y

	* lily/spanner.cc (broken_spanner_index): new function.

2003-06-19  Graham Percival  <gperlist@shaw.ca>

	* input/test/ beam-damp.ly grace-end.ly lyric-extender.ly
	lyric-hyphen.ly : moved to regression.

	* input/test/ beam-stem-test.ly beamed-slur-endings.ly